--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -11,6 +11,7 @@ framework:
     test: ~
     session:
         storage_id: session.storage.mock_file
+        name: MOCKSESSION
     profiler:
         collect: false
 
@@ -24,3 +25,5 @@ swiftmailer:
 doctrine:
     dbal:
         url: 'sqlite:///%kernel.project_dir%/var/data/test.sqlite'
+
+liip_functional_test: ~
