--- a/composer.json
+++ b/composer.json
@@ -30,11 +30,12 @@
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.3.10",
-        "symfony/symfony": "3.3.*",
+        "symfony/symfony": "3.4.*",
         "twig/twig": "^1.0||^2.0"
     },
     "require-dev": {
         "doctrine/data-fixtures": "^1.3",
+        "liip/functional-test-bundle": "~2.0@alpha",
         "phpunit/phpunit": "^7.5",
         "sensio/generator-bundle": "^3.0",
         "symfony/phpunit-bridge": "^4.3"
