--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
     },
     "require-dev": {
         "doctrine/data-fixtures": "^1.3",
-        "liip/functional-test-bundle": "~2.0@alpha",
+        "doctrine/doctrine-fixtures-bundle": "^3.2",
+        "liip/functional-test-bundle": "^1.8",
         "phpunit/phpunit": "^7.5",
         "sensio/generator-bundle": "^3.0",
         "symfony/phpunit-bridge": "^4.3"
